# RPA-automation-web-bot

./: .env.example  .gitignore  README.md  prd.md  pyproject.toml  requirements.txt
analysis/: __init__.py  db_viewer.py  visualize.py
analysis/output/: report.html
docker/: Dockerfile  docker-compose.yml
examples/books_scraper/: config.yaml  run.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Layout.tsx  Metrics.tsx  Proxies.tsx  TaskDetail.tsx  TaskList.tsx
frontend/src/services/: api.ts
src/: __init__.py
src/api/: __init__.py  main.py  websocket.py
src/api/routes/: __init__.py  health.py  metrics.py  tasks.py
src/automation/: __init__.py  actions.py  browser.py  selectors.py
src/cleaning/: __init__.py  deduplicator.py  normalizer.py  pipeline.py
src/core/: __init__.py  config.py  orchestrator.py  scheduler.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/monitoring/: __init__.py  health.py  logger.py  metrics.py
src/proxy/: __init__.py  health_check.py  manager.py  rotator.py
src/scraping/: __init__.py  engine.py  pagination.py  parser.py
src/workers/: __init__.py  base.py  pool.py  retry.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_normalizers.py  test_pipeline.py  test_retry.py
